[package]
name = "netscan-os"
version = "0.13.0"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "TCP/IP stack fingerprinting library for netscan"
repository = "https://github.com/shellrow/netscan"
readme = "../README.md"
keywords = ["network","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rayon = "1.5.3"
rand = "0.8.5"
default-net = {git = "https://github.com/edamametechnologies/default-net.git", branch = "main"}
pnet_packet = "0.31.0"
pnet_datalink = "0.31.0"
